# ppt-template

./: .gitignore  README.md  REQUIRMENTS.md  pyproject.toml
docs/: operations.md  usage.md
examples/: operations_demo.py  render_report.py  text_replace.py
examples/assets/: operations_template.pptx  report_template.pptx  text_replace_template.pptx
singlefile/: ppt_template_sdk.py
src/ppt_template_sdk/: __init__.py  context.py  engine.py  exceptions.py  operations.py  options.py  registry.py  text_replacer.py  validator.py
src/ppt_template_sdk/adapter/: __init__.py  pptx_adapter.py
src/ppt_template_sdk/models/: __init__.py  content.py  placeholder.py  report.py  result.py  text.py
src/ppt_template_sdk/parser/: __init__.py  template_parser.py
tests/: test_sdk.py
